# Fed

./: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_VI.md  PROJECT_STRUCTURE.md  README.md  demo_transport.py  requirements.txt  system_architecture.md  test_adaptive.py  test_advanced_features.py  test_model.py  test_real_datasets.sh  test_transport.py
archive/legacy/server/: __init__.py
archive/quic/client/: app_client.py
archive/quic/transport/: network_monitor.py
client/: __init__.py  adaptive_model.py  app_client.py  data_manager.py  early_exit_trainer.py  fl_client.py  model_trainer.py  nested_trainer.py  quic_client.py
evaluation/: __init__.py  fl_evaluator.py  statistics.py
experiments/scripts/: README.md  exp1_sensitivity_K.sh  exp2_scale_clients.sh  exp3_profile_overhead.sh  exp4_cms_levels.sh  exp5_ablation.sh  run_all_paper_experiments.sh
fedeep/: README.md  pyproject.toml
fedeep/configs/: cifar100_fedeep.yaml  medmnist_chest_fedeep.yaml  medmnist_organ_fedeep.yaml
fedeep/scripts/: run_cifar_fedeep.sh  run_medmnist_fedeep.sh  sweep_edpa_gamma.sh
fedeep/src/: fedeep_main.py
fedeep/src/data/: __init__.py  cifar100.py  medmnist_chest.py  medmnist_organ.py  partition.py
fedeep/src/evaluation/: cka_analysis.py  evaluator.py
fedeep/src/federated/: __init__.py  aggregation.py  client.py  server.py
fedeep/src/metrics/: classification.py  fl_metrics.py
fedeep/src/models/: __init__.py  cms.py  convnext_early_exit.py
fedeep/src/trainer/: __init__.py  local_trainer.py
fedeep/src/utils/: checkpoint.py  flops.py  logging.py  seed.py
jetson/: README.md  run_client.sh
models/: early_exit_mobilevit.py  gated_mobilevit.py  mobilevit_v2.py
models/_archive/: gated_mobilevit.py
nestedfl/: README.md  pyproject.toml
nestedfl/models/: convnext_early_exit.py  early_exit_mobilevit.py
nestedfl/nested_learning/: __init__.py
nestedfl/nested_learning/memory/: __init__.py
nestedfl/nested_learning/optimizers/: deep_momentum.py
nestedfl/nestedfl/: __init__.py  aggregators.py  client_app.py  data_manager.py  logging_config.py  nested_trainer.py  nl_integration.py  server_app.py  task.py
nestedfl/nestedfl/strategies/: __init__.py  edpa_strategy.py  fedavg_strategy.py  fedprox_strategy.py
nestedfl/scripts/: test_features.sh
scripts/: README.md  benchmark_params.sh  demo_transport.py  quick_test.sh  run_experiment.py  run_fl.sh  run_flower_experiment.py  run_full_experiment.sh  run_real_experiment.py  setup.sh  setup_conda.sh  train_full.sh
server/: __init__.py  aggregators.py  app_server.py  checkpoint_manager.py  client_state_manager.py  feddyn_aggregator.py  fl_strategy.py  quic_server.py  redis_client_manager.py
tests/: test_adaptive.py  test_advanced_features.py  test_feddyn_debug.py  test_model.py  test_nested_features.py  test_transport.py
tests/scripts/: test_evaluation_framework.sh
transport/: __init__.py  network_monitor.py  quic_metrics.py  quic_protocol.py  serializer.py
utils/: __init__.py  config.py  metrics.py  torch_compat.py
