# =====================================================================
# Nested Early-Exit Federated Learning with Flower 1.18+
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nestedfl"
version = "1.0.0"
description = "Nested Early-Exit Federated Learning for Edge Devices"
license = "Apache-2.0"
authors = [
    { name = "Research Team" }
]
dependencies = [
    "flwr[simulation]>=1.18.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "research"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "nestedfl.server_app:app"
clientapp = "nestedfl.client_app:app"

# =====================================================================
# Run Configuration
# =====================================================================
[tool.flwr.app.config]
# ── FL Settings ────────────────────────────────────────────────
num-server-rounds = 100
fraction-train = 0.8
fraction-evaluate = 0.5
min-train-clients = 5

# ── Training ────────────────────────────────────────────────────
local-epochs = 5
lr = 0.001
batch-size = 32
dirichlet-alpha = 0.5

# ── Dataset ─────────────────────────────────────────────────────
dataset = "cifar100"

# ── Strategy: "fedavg" | "fedprox" | "edpa" ─────────────────────
strategy = "edpa"
proximal-mu = 0.01          # FedProx only
edpa-gamma = 0.5            # EDPA λ_k = 1/(1 + γk)

# ── Progressive Phase Milestones (rounds) ───────────────────────
phase-1-round = 20          # Activate multi-exit CE
phase-2-round = 40          # Activate fast/slow + CMS
phase-3-round = 60          # Activate KD chain
phase-4-round = 80          # Full FedEEP

# ── Nested Learning ─────────────────────────────────────────────
fast-lr-mult = 3.0
slow-update-freq = 5

# ── Knowledge Distillation ──────────────────────────────────────
kd-weight = 0.3
kd-temp = 4.0

# ── CMS Regularization ──────────────────────────────────────────
cms-weight = 0.1

# ── Disabled features ───────────────────────────────────────────
use-lss = false
use-dmgd = false

# =====================================================================
# Federations
# =====================================================================
[tool.flwr.federations]
default = "local-simulation"

# Local simulation with 10 clients
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# GPU resource allocation (0.1 GPU per client = 10 clients on 1 GPU)
[tool.flwr.federations.local-simulation.options.backend.client-resources]
num-cpus = 1
num-gpus = 0.1

# Remote federation for distributed training
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:9091"
insecure = true
